--- a/table/templates/table/tadiTable.html
+++ b/table/templates/table/tadiTable.html
@@ -156,7 +156,7 @@
                 {%endfor%}
             </tbody>
         </table>
-        <a type="button" class="btn btn-warning mb-3" href="{% url 'menupage' %}">Voltar Menu</a>
+        <a type="button" class="btn btn-warning mb-3" href="{% url 'grade_horaria' %}">Voltar Menu</a>
     </div>
 </body>
 </html>
