--- a/table/templates/table/rp1Table.html
+++ b/table/templates/table/rp1Table.html
@@ -170,7 +170,7 @@
                 {%endfor%}
             </tbody>
         </table>
-        <a type="button" class="btn btn-warning mb-3" href="{% url 'menupage' %}">Voltar Menu</a>
+        <a type="button" class="btn btn-warning mb-3" href="{% url 'grade_horaria' %}">Voltar Menu</a>
     </div>
 </body>
 </html>
