Correcao de erros do ultimo commit

--- a/table/templates/table/index.html
+++ b/table/templates/table/index.html
@@ -394,7 +394,7 @@
                             {%endif%} 
                         {% endfor %}
             
-                        <a type="button" class="btn btn-secondary" href="{% url 'menupage' %}">Voltar Menu</a>
+                        <a type="button" class="btn btn-secondary" href="{% url 'grade_horaria' %}">Voltar Menu</a>
                     </div>
                 </div>
             </div>
